Remove dead code and improve Bartz heat transfer implementation
  Dead code removal:
  - NozzleContour: removed fromControlPoints() and getControlPoints() (no callers)
  - CharacteristicNet: removed generateBatch(), getCenterlinePoints(), centerlinePoints
    field, and unused concurrent imports
  - RaoNozzle: removed unused gamma param from calculateAngles(), unused exitMach local
    in calculateThrustCoefficient(), and unused lengthDifference() method
  - HeatTransferModel: removed calculateSigma() (superseded by reference temperature method)
  - NASASP8120Validator: removed three dead table fields (areaRatioTable,
    thrustCoefficientTable, specificImpulseEfficiencyTable), initializeTables(),
    calculateMachFromAreaRatio(), gamma field and gamma constructor, and unused
    pressureRatio parameter from calculateIdealSpecificImpulse()

  API corrections:
  - GasProperties.prandtlMeyerFunction: throws IllegalArgumentException for M < 1.0
    instead of silently returning 0
  - NozzleDesignParameters: strengthened numberOfCharLines < 5 test with message assertion

  Bartz heat transfer improvements (HeatTransferModel):
  - Prandtl number from Eucken relation (4γ/(9γ-5)) instead of hardcoded 0.72
  - Recovery factor corrected to Pr^(1/3) (was incorrectly using γ^(1/3))
  - Eckert reference temperature method: μ and Cp now evaluated at T* rather than
    fixed throat conditions
  - Iterative T_w convergence (3 passes) resolves circular dependency between T*, h, T_w
  - Local wall radius of curvature computed from contour via finite differences,
    replacing the meaningless fixed (Dt/2rt)^0.1 = 1 term
  - Added 5 tests covering: h > 0, throat peak, axial variation, Pc^0.8 scaling, T_aw > T_static